# pool_analysis

./: .gitignore  README.md
insights/: aerodrom_analysis.py  arbitrage_analysis.py  data_types.py  log.txt  pancake_analysis.py  requirements.txt
insights/utils/: db_conn.py  math.py  tx_group.py
substreams/: .substreams.env.example  Cargo.toml  build.rs  substream.yaml
substreams/proto/: dex.proto
substreams/src/: aerodrome.rs  cli.rs  clmm.rs  db_conn.rs  lib.rs  pancake.rs
substreams/src/pb/: mod.rs
